--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "weave-tool",
   "version": "1.0.0",
+  "type": "module",
   "main": "dist/main.js",
   "scripts": {
     "build": "tsc",
