--- a/package.json
+++ b/package.json
@@ -24,17 +24,20 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "autoprefixer": "^10.4.21",
     "concurrently": "^9.2.0",
     "electron": "^37.2.2",
+    "postcss": "^8.5.6",
     "ts-node": "^10.9.2",
     "typescript": "5.8",
     "vite": "^7.0.4",
     "wait-on": "^8.0.3"
   },
   "dependencies": {
-    "@ant-design/icons": "^6.0.0",
-    "antd": "^5.26.5",
+    "@heroicons/react": "^2.2.0",
+    "@tailwindcss/vite": "^4.1.11",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.11"
   }
 }
