--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
     "dotenv": "^17.2.0",
+    "groq-sdk": "^0.27.0",
     "node-pty": "^1.0.0",
     "openai": "^5.10.1",
     "react": "^19.1.0",
