--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-table": "^8.21.3",
+    "@types/three": "^0.178.1",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
@@ -52,6 +53,7 @@
     "react-paginate": "^8.3.0",
     "react-use": "^17.6.0",
     "tailwindcss": "^4.1.11",
+    "three": "^0.178.0",
     "zod": "^3.25.76"
   }
 }
