Add Cookie viewer

--- a/package.json
+++ b/package.json
@@ -46,12 +46,14 @@
     "@xterm/xterm": "^5.5.0",
     "dotenv": "^17.2.0",
     "groq-sdk": "^0.27.0",
+    "keytar": "^7.9.0",
     "node-pty": "^1.0.0",
     "openai": "^5.10.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-paginate": "^8.3.0",
     "react-use": "^17.6.0",
+    "sqlite3": "^5.1.7",
     "tailwindcss": "^4.1.11",
     "three": "^0.178.0",
     "zod": "^3.25.76"
